--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,112 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{ebert2024sparse,
+  title={Sparse Regression LDPC Codes},
+  author={Ebert, Jamison R and Chamberland, Jean-Francois and Narayanan, Krishna R},
+  journal={IEEE Transactions on Information Theory},
+  year={2024},
+  publisher={IEEE}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{fengler2023advantages,
+  title={On the advantages of asynchrony in the unsourced MAC},
+  author={Fengler, Alexander and Lancho, Alejandro and Narayanan, Krishna and Polyanskiy, Yury},
+  booktitle={2023 IEEE International Symposium on Information Theory (ISIT)},
+  pages={2523--2528},
+  year={2023},
+  organization={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{valmeekam2023llmzip,
+  title={Llmzip: Lossless text compression using large language models},
+  author={Valmeekam, Chandra Shekhara Kaushik and Narayanan, Krishna and Kalathil, Dileep and Chamberland, Jean-Francois and Shakkottai, Srinivas},
+  journal={arXiv preprint arXiv:2306.04050},
+  year={2023}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{ebert2024multi,
+  title={Multi-user SR-LDPC codes via coded demixing with applications to cell-free systems},
+  author={Ebert, Jamison R and Chamberland, Jean-Francois and Narayanan, Krishna R},
+  booktitle={2024 IEEE International Symposium on Information Theory (ISIT)},
+  pages={2015--2020},
+  year={2024},
+  organization={IEEE}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{ankireddy2025lightcode,
+  title={Lightcode: Light analytical and neural codes for channels with feedback},
+  author={Ankireddy, Sravan Kumar and Narayanan, Krishna and Kim, Hyeji},
+  journal={IEEE Journal on Selected Areas in Communications},
+  year={2025},
+  publisher={IEEE}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{agostini2024evolution,
+  title={Evolution of the 5G new radio two-step random access towards 6G unsourced MAC},
+  author={Agostini, Patrick and Chamberland, Jean-Francois and Clazzer, Federico and Dommel, Johannes and Liva, Gianluigi and Munari, Andrea and Narayanan, Krishna and Polyanskiy, Yury and Stanczak, Slawomir and Utkovski, Zoran},
+  journal={arXiv preprint arXiv:2405.03348},
+  year={2024}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{valmeekam2024over,
+  title={Over-the-Air Neural Group Testing},
+  author={Valmeekam, Chandra Shekhara Kaushik and Narayanan, Krishna R and Sprintson, Alex},
+  booktitle={2024 IEEE International Conference on Machine Learning for Communication and Networking (ICMLCN)},
+  pages={360--366},
+  year={2024},
+  organization={IEEE}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{nazer2024computation,
+  title={Computation selection: Scheduling users to enable over-the-air federated learning},
+  author={Nazer, Bobak and Narayanan, Krishna},
+  booktitle={2024 IEEE International Symposium on Information Theory (ISIT)},
+  pages={1635--1640},
+  year={2024},
+  organization={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{agostini2024enhancements,
+  title={Enhancements to the 5G-NR 2-Step RACH: an Unsourced Multiple Access Perspective},
+  author={Agostini, Patrick and Chamberland, Jean-Francois and Clazzer, Federico and Dommel, Johannes and Liva, Gianluigi and Munari, Andrea and Narayanan, Krishna and Polyanskiy, Yury and Stanczak, Slawomir and Utkovski, Zoran},
+  booktitle={2024 IEEE Conference on Standards for Communications and Networking (CSCN)},
+  pages={32--35},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{mattu2024delay,
+  title={Delay-doppler signal processing with zadoff-chu sequences},
+  author={Mattu, Sandesh Rao and Khan, Imran Ali and Khammammetti, Venkatesh and Dabak, Beyza and Mohammed, Saif Khan and Narayanan, Krishna and Calderbank, Robert},
+  journal={arXiv preprint arXiv:2412.04295},
+  year={2024}
+}
+
+@article{tian2025source,
+  title={Source-Channel Separation Theorems for Distortion Perception Coding},
+  author={Tian, Chao and Chen, Jun and Narayanan, Krishna},
+  journal={arXiv preprint arXiv:2501.17706},
+  year={2025}
+}
+
+@article{huang2025relatively,
+  title={Relatively-secure llm-based steganography via constrained markov decision processes},
+  author={Huang, Yu-Shin and Tian, Chao and Narayanan, Krishna and Zheng, Lizhong},
+  journal={arXiv preprint arXiv:2502.01827},
+  year={2025}
+}
+
+@article{kunde2023transformers,
+  title={Transformers are provably optimal in-context estimators for wireless communications},
+  author={Kunde, Vishnu Teja and Rajagopalan, Vicram and Valmeekam, Chandra Shekhara Kaushik and Narayanan, Krishna and Shakkottai, Srinivas and Kalathil, Dileep and Chamberland, Jean-Francois},
+  journal={arXiv preprint arXiv:2311.00226},
+  year={2023}
+}
+
+@article{zecchin2025context,
+  title={In-Context Learning for Gradient-Free Receiver Adaptation: Principles, Applications, and Theory},
+  author={Zecchin, Matteo and Raviv, Tomer and Kalathil, Dileep and Narayanan, Krishna and Shlezinger, Nir and Simeone, Osvaldo},
+  journal={arXiv preprint arXiv:2506.15176},
+  year={2025}
 }
